--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pip=23.0.1=pyhd8ed1ab_0
 pluggy=1.0.0=pyhd8ed1ab_5
 protobuf=4.21.12=py39h23fbdae_0
 pytest=7.2.2=pyhd8ed1ab_0
+pytest-mock=3.10.0=pyhd8ed1ab_0
 python=3.9.16=hea58f1e_0_cpython
 python_abi=3.9=3_cp39
 re2=2023.02.02=hb7217d7_0
